--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family:Young Serif;
+    src: url('assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: Outfit;
+    src: url('assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype');    
+}
 html, body, main, img,h1,h2, h3, ol, ul, li, p, hr, span{
     margin: 0;
     border: 0;
